--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "knuth-shuffle": "^1.0.1",
     "randomstring": "^1.1.4",
     "ws": "^1.1.0"
   }
